--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "url": "https://github.com/bond-agency/react-flowtype/issues"
   },
   "homepage": "https://github.com/bond-agency/react-flowtype#readme",
+  "dependencies": {
+      "react": "^16.2.0"
+  },
   "devDependencies": {
     "webpack": "^1.14.0",
     "babel-core": "^6.21.0",
